# ocel-etl-backlog

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  deny.toml
.github/workflows/: ci.yml
src/: client.rs  lib.rs  main.rs  mapper.rs  models.rs  sync.rs
tests/: client.rs  mapper.rs  sync.rs
tests/fixtures/: comments.json  issue.json
